Remoção do console.log mostrando as palavras e mudança no header > h1

--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,7 @@ body {
   }
   .header-wrapper h1 {
     font-family: "Red Hat Display", sans-serif;
-    font-size: 1.6em;
+    font-size: 1.4em;
     font-weight: 900;
     letter-spacing: 0.02em;
     text-transform: uppercase;
@@ -167,6 +167,7 @@ body {
     border-radius: 50px;
     padding: 2px;
     background-color: #D5DCF2;
+    cursor: pointer;
   }
   #switch .switch-circle {
     width: 30px;
@@ -320,6 +321,9 @@ body {
 }
 
 @media screen and (min-width: 520px) {
+  .header-wrapper h1 {
+    font-size: 1.6em;
+  }
   #word .dscv-letter {
     width: 62px;
     height: 62px;
